# detected_instruments

./: README.md  pyproject.toml  setup.py
app/public/: app.py
app/src/: server.py
data/: .~lock.relatorio_result_models.ods#  relatorio_result_models.ods
data/row/: df.openmic_00_40  df.openmic_101_110  df.openmic_111_120  df.openmic_121_130  df.openmic_131_140  df.openmic_141_155  df.openmic_41_80  df.openmic_81_100  df_instrumentos  df_instrumentos_features_selecionadas  openmic-2018-aggregated-labels.csv  resultados_parametros_aerofone_XGBoost  resultados_parametros_aerofone_histGB  resultados_parametros_aerofone_random_forest  resultados_parametros_corda_XGBoost  resultados_parametros_corda_histGB  resultados_parametros_corda_random_forest  resultados_parametros_percusao_XGBoost  resultados_parametros_percusao_histGB  resultados_parametros_percusao_random_forest  (+3 more)
experiments/: baseline.ipynb  modeling.ipynb  modeling_part01.ipynb  modeling_part02.ipynb
notebooks/: analise_anomalias.ipynb  avaliacao_models.ipynb  baseline.ipynb  clf_genero_inst.ipynb  clf_par_inst.ipynb  experimets01.ipynb  experimets02.ipynb  metodologias_eficientes.ipynb  metodologias_promissoras.ipynb  model_all_instrument.ipynb  model_inst_aerofone.ipynb  model_inst_corda.ipynb  model_inst_percusao.ipynb  model_inst_sopro.ipynb  modeling.ipynb  teste.ipynb  testes.ipynb  tunning_hiperparametros.ipynb
scripts/: train.py  wrapped.py
scripts.egg-info/: PKG-INFO  SOURCES.txt
src/: analyses.py  analysesV02.py  main.py  train.py  trainV02.py  wrapped.py
tests/: test_model.py
(+7 files in other folders)
